--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -79,10 +79,10 @@
 
 
 // Modo oscuro opcional
-@media (prefers-color-scheme: light) {
-  :root {
-    --app-background: #121212;
-    --ion-background-color: var(--app-background);
-    --ion-text-color: #ffffff;
-  }
-}
+// @media (prefers-color-scheme: light) {
+//   :root {
+//     --app-background: #121212;
+//     --ion-background-color: var(--app-background);
+//     --ion-text-color: #ffffff;
+//   }
+// }
