--- a/src/app/page/menu/menu.page.html
+++ b/src/app/page/menu/menu.page.html
@@ -4,7 +4,7 @@
         <ion-buttons slot="end">
             <!-- Usa ion-avatar con la imagen de perfil -->
             <ion-avatar class="user-avatar" (click)="openProfile()">
-                <img src="./assets/icon/perfil.png" alt="perfil">
+                <img [src]="avatarUrl" alt="perfil">
             </ion-avatar>
         </ion-buttons>
     </ion-toolbar>
@@ -90,8 +90,7 @@
 <ion-footer class="ion-no-border">
     <ion-toolbar>
         <ion-tab-bar class="bottom-nav">
-            <ion-tab-button *ngFor="let item of navItems" (click)="navigate(item.route)"
-                [class.active]="item.route === activeRoute" [routerLink]="item.route">
+            <ion-tab-button *ngFor="let item of navItems" [routerLink]="item.route" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
                 <ion-icon [name]="item.icon"></ion-icon>
                 <!-- Solo mostramos la etiqueta para claridad en el código, pero se oculta por SCSS -->
                 <ion-label *ngIf="item.label">{{ item.label }}</ion-label>
