--- a/src/app/page/producto/producto.page.html
+++ b/src/app/page/producto/producto.page.html
@@ -1,12 +1,12 @@
 <ion-content >
   <div class="header">
     
-      <ion-button class="btnHeader" (click)="regresarMenu()">        
-        <ion-icon slot="icon-only" color="light" name="arrow-back"></ion-icon>
-      </ion-button>
+      <ion-button class="btnHeader" (click)="regresarMenu()" aria-label="Regresar">
+        <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
+      </ion-button> 
         
-      <ion-button class="btnHeader" (click)="irAlCarrito()">       
-        <ion-icon slot="icon-only" color="light" name="heart-outline"></ion-icon>
+      <ion-button class="btnHeader" (click)="irAlCarrito()" aria-label="Ir al carrito">       
+        <ion-icon slot="icon-only" name="cart"></ion-icon>
       </ion-button>    
   </div>
 
